# Search-Relevance-Lab

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  deployment.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: .dockerignore  Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json  package.json
apps/web/app/: Breadcrumbs.tsx  MetricsGlossary.tsx  SearchBox.tsx  globals.css  layout.tsx  page.tsx  results.tsx  types.ts
apps/web/app/runs/: page.tsx
apps/web/app/runs/compare/: page.tsx
apps/web/app/runs/compare/[qid]/: page.tsx
apps/web/app/runs/fusion/: page.tsx
docker/caddy/: Caddyfile
docs/: findings.md
scripts/: backup-postgres.sh  host_check.py  host_download_model.py  load-env.ps1
services/api/: Dockerfile  README.md  fusion.py  main.py  pyproject.toml
services/api/tests/: test_fusion.py
services/eval/: metrics.py  pyproject.toml  runner.py  schema.sql  significance.py
services/eval/tests/: test_metrics.py  test_validation.py
services/indexer/: Dockerfile  README.md  index_lexical.py  index_vector.py  ingest.py  main.py  pyproject.toml  query_vector.py  schema.sql
